# swc-parse-test

./: .editorconfig  .gitignore  Cargo.toml  README.md  TODO.md  index.js  package-lock.json  package.json  simple-test.js
.github/workflows/: CI.yaml
benchmark/: bench.js
lib/: addon.js  createJs.js  parseJson.js  swcParseRaw.js
lib/buffer/: astToBuffer.js  bufferToAst.js  constants.js
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs  many_buffers.rs  to_buffer.rs  to_object.rs
test/: buffer.js  object.js
